--- a/code/API_definitions/BYON-CallHandling-Service.yaml
+++ b/code/API_definitions/BYON-CallHandling-Service.yaml
@@ -9,7 +9,7 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.0.0
 servers:
-  - url: '{apiRoot}/vvoip/{apiVersion}/{userId}'
+  - url: '{apiRoot}/vvoip/{apiVersion}'
     variables:
       apiRoot:
         description: API root
@@ -17,9 +17,6 @@ servers:
       apiVersion:
         description: Version of the VVOIP service API
         default: v1
-      userId:
-        description: The public identity of the user in the URI format through which client is trying to communicate. It can be a tel or sip URI.
-        default: 'userId'
 tags:
   - name: OneToOneCall
     description: APIs related to 1-1 voice/video call session
@@ -237,9 +234,6 @@ components:
       properties:
         status:
           $ref: '#/components/schemas/SessionStatus'
-        responseCode:
-          type: integer
-          description: Indicates corresponding SIP response code, mainly used for provisional responses (status set to InProgress)
         offer:
           $ref: '#/components/schemas/WrtcsOffer'
         answer:
@@ -270,10 +264,6 @@ components:
       properties:
         status:
           $ref: '#/components/schemas/SessionStatus'
-        responseCode:
-          type: integer
-          description: |
-            Indicates corresponding SIP response code, mainly used for provisional responses (status set to “InProgress”, “Ringing”) Possible values are 180, 183, 200, if any other values are set, then the behavior is undefined or unknown. When the client sets the status as “Hold”, the responseCode element be set to 200. Web RTC gateway shall be use this to determins WebRTC GW if it's a hold request or response to hold notification sent earlier.
         offer:
           $ref: '#/components/schemas/WrtcsOffer'
         answer:
@@ -384,19 +374,16 @@ components:
           status: InProgress
           answer:
             sdp: "v=0\r\no=- 8066321617929821805 2 IN IP4 127.0.0.1\r\ns=-\r\nt=0 0\r\nm=audio 42988 RTP/SAVPF 102 113\r\nc=IN IP6 2001:e0:410:2448:7a05:9b11:66f2:c9e\r\nb=AS:64\r\na=rtcp:9 IN IP4 0.0.0.0\r\na=candidate:1645903805 1 udp 2122262783 2001:e0:410:2448:7a05:9b11:66f2:c9e 42988 typ host generation 0 network-id 3 network-cost 900\r\na=ice-ufrag:4eKp\r\na=ice-pwd:D4sF5Pv9vx9ggaqxBlHbAFMx\r\na=ice-options:trickle renomination\r\na=mid:audio\r\na=extmap:2 http://www.ietf.org/id/draft-holmer-rmcat-transport-wide-cc-extensions-01\r\na=sendrecv\r\na=rtcp-mux\r\na=crypto:1 AES_CM_128_HMAC_SHA1_80 inline:Xm3YciqVIWFNSwy19e9MvfZ2YOdAZil7oT/tHjdf\r\na=rtpmap:102 AMR-WB/16000\r\na=fmtp:102 octet-align=0; mode-set=0,1,2; mode-change-capability=2\r\na=rtpmap:113 telephone-event/16000\r\n"
-          responseCode: '183'
     exMT180:
       value:
         receiverSessionStatus:
           status: Ringing
-          responseCode: '180'
     exMT200:
       value:
         receiverSessionStatus:
           status: Connected
           answer:
             sdp: "v=0\r\no=- 4576312012535546667 4 IN IP4 127.0.0.1\r\ns=-\r\nt=0 0\r\nm=audio 47510 RTP/SAVPF 102 113\r\nc=IN IP6 2001:e0:410:243a:a344:cee7:7b39:bb1e\r\nb=AS:64\r\na=rtcp:9 IN IP4 0.0.0.0\r\na=candidate:3108871805 1 udp 2122262783 2001:e0:410:243a:a344:cee7:7b39:bb1e 47510 typ host generation 0 network-id 3 network-cost 900\r\na=ice-ufrag:47Nx\r\na=ice-pwd:ln3CttOSkObcQ7A0tYO1LXqy\r\na=ice-options:trickle renomination\r\na=mid:audio\r\na=extmap:2 http://www.ietf.org/id/draft-holmer-rmcat-transport-wide-cc-extensions-01\r\na=sendrecv\r\na=rtcp-mux\r\na=crypto:1 AES_CM_128_HMAC_SHA1_80 inline:ruAnBNYnTJqDVZAIJV59VpQ5DxGI6tMX9h9kkHSz\r\na=rtpmap:102 AMR-WB/16000\r\na=fmtp:102 octet-align=0; mode-set=0,1,2; mode-change-capability=2\r\na=rtpmap:113 telephone-event/16000\r\na=ptime:20\r\n"
-          responseCode: '200'
   securitySchemes:
     BearerAuth:
       type: http
