--- a/code/API_definitions/BYON-CallHandling-Service.yaml
+++ b/code/API_definitions/BYON-CallHandling-Service.yaml
@@ -7,7 +7,7 @@ info:
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
-  version: 0.1.0
+  version: 0.1.1
 servers:
   - url: '{apiRoot}/vvoip/{apiVersion}'
     variables:
@@ -38,15 +38,7 @@ paths:
             schema:
               $ref: '#/components/schemas/VvoipSessionInformation'
       responses:
-        '201':
-          description: Created
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/VvoipSessionInformation'
-              examples:
-                SessionCreated:
-                  $ref: '#/components/examples/exVSIResponse'
+        
         '400':
           $ref: '#/components/responses/Generic400'
         '403':
@@ -153,6 +145,9 @@ paths:
       responses:
         '200':
           description: Updated the session status
+        
+        '201':
+          $ref: '#/components/responses/Generic201'
         '401':
           $ref: '#/components/responses/Generic401'
         '403':
@@ -188,7 +183,6 @@ components:
           description: Friendly name of the receiver
           example: receiver
         status:
-          description: Provides the status of the VVOIP session. During the session creation, this attribute SHALL NOT be included in the request.
           $ref: '#/components/schemas/SessionStatus'
         offer:
           $ref: '#/components/schemas/WrtcsOffer'
@@ -326,6 +320,22 @@ components:
         - status
         - code
         - message
+    ObjectResponse:
+      type: object
+      properties:
+        status:
+          type: integer
+          description: HTTP status code returned created
+        code:
+          type: string
+          description: Code given to this created
+        body:
+          type: object
+          description: Response Object
+      required:
+        - status
+        - code
+        - body
     Address:
       type: string
       description: Sender or Receiver address
@@ -385,6 +395,28 @@ components:
           status: Connected
           answer:
             sdp: "v=0\r\no=- 4576312012535546667 4 IN IP4 127.0.0.1\r\ns=-\r\nt=0 0\r\nm=audio 47510 RTP/SAVPF 102 113\r\nc=IN IP6 2001:e0:410:243a:a344:cee7:7b39:bb1e\r\nb=AS:64\r\na=rtcp:9 IN IP4 0.0.0.0\r\na=candidate:3108871805 1 udp 2122262783 2001:e0:410:243a:a344:cee7:7b39:bb1e 47510 typ host generation 0 network-id 3 network-cost 900\r\na=ice-ufrag:47Nx\r\na=ice-pwd:ln3CttOSkObcQ7A0tYO1LXqy\r\na=ice-options:trickle renomination\r\na=mid:audio\r\na=extmap:2 http://www.ietf.org/id/draft-holmer-rmcat-transport-wide-cc-extensions-01\r\na=sendrecv\r\na=rtcp-mux\r\na=crypto:1 AES_CM_128_HMAC_SHA1_80 inline:ruAnBNYnTJqDVZAIJV59VpQ5DxGI6tMX9h9kkHSz\r\na=rtpmap:102 AMR-WB/16000\r\na=fmtp:102 octet-align=0; mode-set=0,1,2; mode-change-capability=2\r\na=rtpmap:113 telephone-event/16000\r\na=ptime:20\r\n"
+    
+    exMT201_183:
+      value:
+        receiverSessionStatus:
+          status: 201
+          code: CREATED
+          answer:
+            status: "InProgress"
+            answer: 
+              sdp: "v=0\r\no=- 8066321617929821805 2 IN IP4 127.0.0.1\r\ns=-\r\nt=0 0\r\nm=audio 42988 RTP/SAVPF 102 113\r\nc=IN IP6 2001:e0:410:2448:7a05:9b11:66f2:c9e\r\nb=AS:64\r\na=rtcp:9 IN IP4 0.0.0.0\r\na=candidate:1645903805 1 udp 2122262783 2001:e0:410:2448:7a05:9b11:66f2:c9e 42988 typ host generation 0 network-id 3 network-cost 900\r\na=ice-ufrag:4eKp\r\na=ice-pwd:D4sF5Pv9vx9ggaqxBlHbAFMx\r\na=ice-options:trickle renomination\r\na=mid:audio\r\na=extmap:2 http://www.ietf.org/id/draft-holmer-rmcat-transport-wide-cc-extensions-01\r\na=sendrecv\r\na=rtcp-mux\r\na=crypto:1 AES_CM_128_HMAC_SHA1_80 inline:Xm3YciqVIWFNSwy19e9MvfZ2YOdAZil7oT/tHjdf\r\na=rtpmap:102 AMR-WB/16000\r\na=fmtp:102 octet-align=0; mode-set=0,1,2; mode-change-capability=2\r\na=rtpmap:113 telephone-event/16000\r\n"
+              
+    
+    exMT201_200:
+      value:
+        receiverSessionStatus:
+          status: 201
+          code: CREATED
+          answer:
+            status: "InProgress"
+            answer: 
+              sdp: "v=0\r\no=- 4576312012535546667 4 IN IP4 127.0.0.1\r\ns=-\r\nt=0 0\r\nm=audio 47510 RTP/SAVPF 102 113\r\nc=IN IP6 2001:e0:410:243a:a344:cee7:7b39:bb1e\r\nb=AS:64\r\na=rtcp:9 IN IP4 0.0.0.0\r\na=candidate:3108871805 1 udp 2122262783 2001:e0:410:243a:a344:cee7:7b39:bb1e 47510 typ host generation 0 network-id 3 network-cost 900\r\na=ice-ufrag:47Nx\r\na=ice-pwd:ln3CttOSkObcQ7A0tYO1LXqy\r\na=ice-options:trickle renomination\r\na=mid:audio\r\na=extmap:2 http://www.ietf.org/id/draft-holmer-rmcat-transport-wide-cc-extensions-01\r\na=sendrecv\r\na=rtcp-mux\r\na=crypto:1 AES_CM_128_HMAC_SHA1_80 inline:ruAnBNYnTJqDVZAIJV59VpQ5DxGI6tMX9h9kkHSz\r\na=rtpmap:102 AMR-WB/16000\r\na=fmtp:102 octet-align=0; mode-set=0,1,2; mode-change-capability=2\r\na=rtpmap:113 telephone-event/16000\r\na=ptime:20\r\n"
+        
   securitySchemes:
     BearerAuth:
       type: http
@@ -460,3 +492,14 @@ components:
             status: 503
             code: UNAVAILABLE
             message: Service unavailable
+    Generic201:
+      description: Created
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ObjectResponse'
+          examples:
+            SessionCreatedMT183:
+              $ref: '#/components/examples/exMT201_183'
+            SessionCreatedMT200:
+              $ref: '#/components/examples/exMT201_200'
