--- a/code/API_definitions/BYON-Notification-Channel.yaml
+++ b/code/API_definitions/BYON-Notification-Channel.yaml
@@ -1,29 +1,37 @@
-openapi: 3.0.0
+openapi: 3.0.3
 info:
   title: Bring Your Own Number (BYON) Notification Channel APIs
-  description: This API provide REST API for a client, browser or native application, to establish notification channel to receive asynchronous notifications from MNO's IMS Network.
+  description: >-
+    This API provide REST API for a client, browser or native application, to
+    establish notification channel to receive asynchronous notifications from
+    MNO's IMS Network.
   version: 0.1.0
   contact:
     email: contact@domain.com
   license:
     name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
+    url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
 servers:
-- url: '{apiRoot}/notificationchannel/{apiVersion}/{deviceId}'
-  description: APIs to create Notification Channels
-  variables:
-    apiRoot:
-      description: API Root
-      default: http://localhost:9091
-    apiVersion:
-      description: The version of API to be used
-      default: v1
-    deviceId:
-      description: "The notification channel creation is specific to a device instance, the device-id in the uuid format (rfc4412) shall be included in the request"
-      default: 'deviceId'
+  - url: '{apiRoot}/notificationchannel/{apiVersion}/{deviceId}'
+    description: APIs to create Notification Channels
+    variables:
+      apiRoot:
+        description: API Root
+        default: 'http://localhost:9091'
+      apiVersion:
+        description: The version of API to be used
+        default: v1
+      deviceId:
+        description: >-
+          The notification channel creation is specific to a device instance,
+          the device-id in the uuid format (rfc4412) shall be included in the
+          request
+        default: deviceId
 tags:
   - name: Notification Channel
-    description: APIs for establishing notification channel to receive asynchronous notifications from MNO's IMS network
+    description: >-
+      APIs for establishing notification channel to receive asynchronous
+      notifications from MNO's IMS network
 paths:
   /channels:
     get:
@@ -32,18 +40,18 @@ paths:
         - $ref: '#/components/parameters/hdrTransactionId'
         - $ref: '#/components/parameters/hdrClientId'
       responses:
-        "200":
+        '200':
           description: Success
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/NotificationChannelList'
-        "403":
+        '403':
           $ref: '#/components/responses/Generic403'
       security:
         - BearerAuth:
-          - read
-          - write
+            - read
+            - write
     post:
       description: Create notification channel(s)
       parameters:
@@ -55,15 +63,15 @@ paths:
             schema:
               $ref: '#/components/schemas/NotificationChannelsInformation'
       responses:
-        "200":
+        '200':
           description: Success
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/NotificationChannelsInformation'
-        "403":
+        '403':
           description: Forbidden
-        "409":
+        '409':
           description: Conflict
       security:
         - BearerAuth:
@@ -93,48 +101,64 @@ components:
       explode: false
       schema:
         type: string
-
   schemas:
     ChannelType:
       type: string
-      description: Specifies the type of Notification Channel to be used and thereby defines the method that will be used to receive new notifications on the channel.
+      description: >-
+        Specifies the type of Notification Channel to be used and thereby
+        defines the method that will be used to receive new notifications on the
+        channel.
       enum:
-      - WebSockets
-      - PNSChannel
-      
+        - WebSockets
+        - PNSChannel
     WebSocketsData:
       properties:
         channelURL:
           type: string
-          description: "Specified by the server. Contains the URL used to open a WebSockets connection to receive event notification. The channelURL SHALL NOT be included in POST request to create the Notification Channel resource, but MUST be included in the response to the channel creation and any HTTP method that returns an entity body."
-
+          description: >-
+            Specified by the server. Contains the URL used to open a WebSockets
+            connection to receive event notification. The channelURL SHALL NOT
+            be included in POST request to create the Notification Channel
+            resource, but MUST be included in the response to the channel
+            creation and any HTTP method that returns an entity body.
     PNSChannelData:
       description: This specifies the properties of PNS channel the client wish to use
       properties:
         registrationToken:
           type: string
-          description: |
-            The client shall include this in the request & this provides the token assigned by the notification service provider for the device (e.g. APNS or FCM).
-            How client obtain this token is outside the scope of this API specification.
+          description: >
+            The client shall include this in the request & this provides the
+            token assigned by the notification service provider for the device
+            (e.g. APNS or FCM).
 
+            How client obtain this token is outside the scope of this API
+            specification.
     NotificationChannel:
       required:
-      - channelType
-      - channelData
+        - channelType
+        - channelData
       properties:
         channelType:
           $ref: '#/components/schemas/ChannelType'
         channelData:
           oneOf:
-          - $ref: '#/components/schemas/WebSocketsData'
-          - $ref: '#/components/schemas/PNSChannelData'
+            - $ref: '#/components/schemas/WebSocketsData'
+            - $ref: '#/components/schemas/PNSChannelData'
         resourceURL:
           type: string
-          description: "Self referring URL. The resourceURL SHALL NOT be included in POST requests by the client, but MUST be included in POST requests representing notifications by the server to the client, when a complete representation of the resource is embedded in the notification. The resourceURL MUST be also included in responses to any HTTP method that returns an entity body, and in PUT requests."
+          description: >-
+            Self referring URL. The resourceURL SHALL NOT be included in POST
+            requests by the client, but MUST be included in POST requests
+            representing notifications by the server to the client, when a
+            complete representation of the resource is embedded in the
+            notification. The resourceURL MUST be also included in responses to
+            any HTTP method that returns an entity body, and in PUT requests.
         callbackURL:
           type: string
-          description: This will be specified by the server and contains the callback URL used when establishing subscription for notifications from service providing servers.
-
+          description: >-
+            This will be specified by the server and contains the callback URL
+            used when establishing subscription for notifications from service
+            providing servers.
     NotificationChannelList:
       type: object
       properties:
@@ -145,7 +169,6 @@ components:
         resourceURL:
           type: string
           description: Self referring URL
-    
     NotificationChannelsInformation:
       type: object
       properties:
@@ -153,7 +176,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/NotificationChannel'
-
     ErrorInfo:
       type: object
       properties:
@@ -170,7 +192,6 @@ components:
         - status
         - code
         - message
-  
   responses:
     Generic400:
       description: Bad request
@@ -211,7 +232,7 @@ components:
           example:
             status: 409
             code: CONFLICT
-            message: 'Simultaneous channel requests not supported'
+            message: Simultaneous channel requests not supported
     NotFound404:
       description: Session Not found
       content:
