--- a/code/API_definitions/BYON-CallHandling-Service.yaml
+++ b/code/API_definitions/BYON-CallHandling-Service.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.0
+openapi: 3.0.3
 info:
   title: Bring Your Own Number (BYON) call handling API (VVOIP Service)
   description: APIs for REST clients for 1-1 calling
@@ -6,14 +6,14 @@ info:
     email: contact@domain.com
   license:
     name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
+    url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
   version: 0.1.2
 servers:
   - url: '{apiRoot}/vvoip/{apiVersion}'
     variables:
       apiRoot:
         description: API root
-        default: http://localhost:9091
+        default: 'http://localhost:9091'
       apiVersion:
         description: Version of the VVOIP service API
         default: v1
@@ -50,7 +50,7 @@ paths:
         - BearerAuth:
             - read
             - write
-  /sessions/{sessionId}:
+  '/sessions/{sessionId}':
     get:
       tags:
         - OneToOneCall
@@ -124,7 +124,7 @@ paths:
         - BearerAuth:
             - read
             - write
-  /sessions/{sessionId}/status:
+  '/sessions/{sessionId}/status':
     put:
       tags:
         - OneToOneCall
@@ -211,7 +211,7 @@ components:
             resource is embedded in the notification. The resourceURL must also
             be included in responses to any HTTP method that returns an entity
             body, and in PUT requests
-          example: $url/{sessionId}
+          example: '$url/{sessionId}'
     SessionInvitationNotification:
       required:
         - originatorAddress
@@ -280,7 +280,8 @@ components:
             (QoE) reports
         reason:
           type: string
-          description: The description of the event that has happened within the session
+          description: |
+            The description of the event that has happened within the session
         sequenceNumber:
           type: string
           description: The sequence number of the notification sent to client
@@ -379,8 +380,8 @@ components:
     Address:
       type: string
       description: Sender or Receiver address
-      pattern: ^(tel:+[0-9]{5,15}|sip:.+@.+|.+)$
-      example: tel:+11234567899
+      pattern: '^(tel:+[0-9]{5,15}|sip:.+@.+|.+)$'
+      example: 'tel:+11234567899'
   parameters:
     hdrClientId:
       name: clientId
@@ -412,10 +413,10 @@ components:
   examples:
     exVSIResponse:
       value:
-        originatorAddress: tel:+17085852753
-        originatorName: tel:+17085852753
-        receiverAddress: tel:+17085854000
-        receiverName: tel:+17085854000
+        originatorAddress: 'tel:+17085852753'
+        originatorName: 'tel:+17085852753'
+        receiverAddress: 'tel:+17085854000'
+        receiverName: 'tel:+17085854000'
         status: Initial
         clientCorrelator: fda6e26d-e7c8-4596-870c-c083c0d39b2c
         resourceURL: >-
@@ -425,7 +426,37 @@ components:
         receiverSessionStatus:
           status: InProgress
           answer:
-            sdp: "v=0\r\no=- 8066321617929821805 2 IN IP4 127.0.0.1\r\ns=-\r\nt=0 0\r\nm=audio 42988 RTP/SAVPF 102 113\r\nc=IN IP6 2001:e0:410:2448:7a05:9b11:66f2:c9e\r\nb=AS:64\r\na=rtcp:9 IN IP4 0.0.0.0\r\na=candidate:1645903805 1 udp 2122262783 2001:e0:410:2448:7a05:9b11:66f2:c9e 42988 typ host generation 0 network-id 3 network-cost 900\r\na=ice-ufrag:4eKp\r\na=ice-pwd:D4sF5Pv9vx9ggaqxBlHbAFMx\r\na=ice-options:trickle renomination\r\na=mid:audio\r\na=extmap:2 http://www.ietf.org/id/draft-holmer-rmcat-transport-wide-cc-extensions-01\r\na=sendrecv\r\na=rtcp-mux\r\na=crypto:1 AES_CM_128_HMAC_SHA1_80 inline:Xm3YciqVIWFNSwy19e9MvfZ2YOdAZil7oT/tHjdf\r\na=rtpmap:102 AMR-WB/16000\r\na=fmtp:102 octet-align=0; mode-set=0,1,2; mode-change-capability=2\r\na=rtpmap:113 telephone-event/16000\r\n"
+            sdp: >
+              "v=0\r\no=- 8066321617929821805 2 IN IP4 127.0.0.1\r\ns=-\r\nt=0
+              0\r\nm=
+
+              audio 42988 RTP/SAVPF 102 113\r\nc=IN IP6
+              2001:e0:410:2448:7a05:9b11:66f2
+
+              :c9e\r\nb=AS:64\r\na=rtcp:9 IN IP4
+              0.0.0.0\r\na=candidate:1645903805 1 udp
+
+              2122262783 2001:e0:410:2448:7a05:9b11:66f2:c9e 42988 typhost
+              generation 0
+
+              network-id 3 network-cost
+              900\r\na=ice-ufrag:4eKp\r\na=ice-pwd:D4sF5Pv9vx9
+
+              ggaqxBlHbAFMx\r\na=ice-options:trickle
+              renomination\r\na=mid:audio\r\na=
+
+              extmap:2
+              http://www.ietf.org/id/draft-holmer-rmcat-transport-wide-cc-extensions
+
+              -01\r\na=sendrecv\r\na=rtcp-mux\r\na=crypto:1
+              AES_CM_128_HMAC_SHA1_80 inline:Xm
+
+              3YciqVIWFNSwy19e9MvfZ2YOdAZil7oT/tHjdf\r\na=rtpmap:102
+              AMR-WB/16000\r\na=fmtp:102
+
+              octet-align=0; mode-set=0,1,2;
+              mode-change-capability=2\r\na=rtpmap:113
+              telephone-event/16000\r\n"
     exMT180:
       value:
         receiverSessionStatus:
@@ -435,7 +466,31 @@ components:
         receiverSessionStatus:
           status: Connected
           answer:
-            sdp: "v=0\r\no=- 4576312012535546667 4 IN IP4 127.0.0.1\r\ns=-\r\nt=0 0\r\nm=audio 47510 RTP/SAVPF 102 113\r\nc=IN IP6 2001:e0:410:243a:a344:cee7:7b39:bb1e\r\nb=AS:64\r\na=rtcp:9 IN IP4 0.0.0.0\r\na=candidate:3108871805 1 udp 2122262783 2001:e0:410:243a:a344:cee7:7b39:bb1e 47510 typ host generation 0 network-id 3 network-cost 900\r\na=ice-ufrag:47Nx\r\na=ice-pwd:ln3CttOSkObcQ7A0tYO1LXqy\r\na=ice-options:trickle renomination\r\na=mid:audio\r\na=extmap:2 http://www.ietf.org/id/draft-holmer-rmcat-transport-wide-cc-extensions-01\r\na=sendrecv\r\na=rtcp-mux\r\na=crypto:1 AES_CM_128_HMAC_SHA1_80 inline:ruAnBNYnTJqDVZAIJV59VpQ5DxGI6tMX9h9kkHSz\r\na=rtpmap:102 AMR-WAB/16000\r\na=fmtp:102 octet-align=0; mode-set=0,1,2; mode-change-capability=2\r\na=rtpmap:113 telephone-event/16000\r\na=ptime:20\r\n"
+            sdp: >
+              "v=0\r\no=- 4576312012535546667 4 IN IP4 127.0.0.1\r\ns=-\r\nt=0
+              0\r\nm=audio 47510 RTP/SAVPF 102 113\r\nc=IN
+
+              IP6 2001:e0:410:243a:a344:cee7:7b39:bb1e\r\nb=AS:64\r\na=rtcp:9 IN
+              IP4 0.0.0.0\r\na=candidate:3108871805 1 udp
+
+              2122262783 2001:e0:410:243a:a344:cee7:7b39:bb1e 47510 typ host
+              generation 0 network-id 3 network-cost 900\r\na=
+
+              ice-ufrag:47Nx\r\na=ice-pwd:ln3CttOSkObcQ7A0tYO1LXqy\r\na=ice-options:trickle
+              renomination\r\na=mid:audio\r\na=
+
+              extmap:2
+              http://www.ietf.org/id/draft-holmer-rmcat-transport-wide-cc-extensions-01\r\na=sendrecv\r\na=rtcp-mux\r
+
+              \na=crypto:1 AES_CM_128_HMAC_SHA1_80
+              inline:ruAnBNYnTJqDVZAIJV59VpQ5DxGI6tMX9h9kkHSz\r\na=rtpmap:102
+              AMR-WAB/16000
+
+              \r\na=fmtp:102 octet-align=0; mode-set=0,1,2;
+              mode-change-capability=2\r\na=rtpmap:113
+              telephone-event/16000\r\na=
+
+              ptime:20\r\n"
   securitySchemes:
     BearerAuth:
       type: http
